[GStreamer] Video freezes when GStreamerGL is not installed https://bugs.webkit.org/show_bug.cgi?id=184925

Reviewed by Žan Doberšek.

At runtime when the GStreamer opengl plugin isn't available the
player will fallback to the internal WebKit video sink. The
VideoFrameHolder was refactored to handle both cases (opengl,
non-opengl).

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.cpp:
(WebCore::GstVideoFrameHolder::GstVideoFrameHolder):
(WebCore::GstVideoFrameHolder::~GstVideoFrameHolder):
(WebCore::GstVideoFrameHolder::frame const):
(WebCore::GstVideoFrameHolder::updateTexture):
(WebCore::MediaPlayerPrivateGStreamerBase::pushTextureToCompositor):
(WebCore::MediaPlayerPrivateGStreamerBase::triggerRepaint):
(WebCore::GstVideoFrameHolder::isValid const): Deleted.
(WebCore::MediaPlayerPrivateGStreamerBase::updateTexture): Deleted.
* platform/graphics/gstreamer/MediaPlayerPrivateGStreamerBase.h:

Canonical link: https://commits.webkit.org/201910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232790 268f45cc-cd09-0410-ab3c-d52691b4dbfc